# CodeOrbit-Rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md
bundled-plugins/: antigravity.json  claude.json  cline.json  codebuddy.json  codex.json  copilot.json  cursor.json  droid.json  gemini.json  hermes.json  kimi.json  kiro.json  opencode.json  pi.json  qoder.json  qwen.json  stepfun.json  trae.json  workbuddy.json
crates/codeorbit-bridge/: Cargo.toml
crates/codeorbit-bridge/src/: bridge_client.rs  environment_collector.rs  event_classifier.rs  field_normalizer.rs  main.rs  payload_serializer.rs  process_ancestry.rs  program.rs  source_resolver.rs  tracked_process_resolver.rs
crates/codeorbit-contracts/: Cargo.toml
crates/codeorbit-contracts/src/: lib.rs
crates/codeorbit-contracts/src/dto/: event.rs  health.rs  mod.rs  pending.rs  permission.rs  question.rs  session.rs  source.rs
crates/codeorbit-core/: Cargo.toml
crates/codeorbit-core/src/: lib.rs
crates/codeorbit-core/src/ipc/: error.rs  message_protocol.rs  mod.rs  named_pipe_path.rs  transport.rs
crates/codeorbit-core/src/models/: agent_status.rs  chat_message.rs  hook_event.rs  mod.rs  permission_request.rs  question.rs  session_snapshot.rs  side_effect.rs  supported_source.rs  tool_history.rs
crates/codeorbit-core/src/services/: claude_style_hook_response_builder.rs  codex_home.rs  codex_hook_response_builder.rs  codex_permission_rules.rs  event_logger.rs  event_normalizer.rs  hook_response_builder.rs  hook_response_diagnostics.rs  hook_tool_classifier.rs  l10n.rs  legacy_question_response_builder.rs  mod.rs  session_persistence.rs  settings_manager.rs  transcript_message_reader.rs  transcript_path_resolver.rs
crates/codeorbit-core/src/sources/: adapter_registry.rs  adapter_trait.rs  hook_installation_utils.rs  hook_strategy_factory.rs  mod.rs  plugin_models.rs  plugin_process_detector.rs  plugin_validator.rs  source_plugin_json_parser.rs  source_plugin_loader.rs
crates/codeorbit-core/src/sources/strategies/: claude_matcher.rs  cline.rs  codex.rs  copilot.rs  flat.rs  mod.rs  nested.rs
crates/codeorbit-core/tests/: plugin_system.rs  plugin_validation.rs
crates/codeorbit-host/: Cargo.toml
crates/codeorbit-host/src/: args.rs  main.rs  manifest.rs  owner_monitor.rs  single_instance.rs
crates/codeorbit-hub/: Cargo.toml
crates/codeorbit-hub/src/: config_installer.rs  hook_server.rs  lib.rs  process_monitor.rs  source_service.rs  state.rs  wsl_installer.rs
crates/codeorbit-hub/src/api/: app_state.rs  auth_middleware.rs  error.rs  health.rs  mod.rs  pending.rs  permissions.rs  questions.rs  runtime_assets.rs  sessions.rs  sources.rs  token_store.rs  ws.rs
crates/codeorbit-hub/tests/: api.rs  e2e.rs  sources.rs  ws.rs
docs/: README.md  README_CN.md  api-reference.en.md  api-reference.md  external-display-client.en.md  external-display-client.md  integration-guide.en.md  integration-guide.md  plugin-schema.en.md  plugin-schema.md  runtime-display-contract.md  runtime-display-contract.zh-CN.md  source-plugins.en.md  source-plugins.md
scripts/: package-release.py
