[package]
name = "codeorbit-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "codeorbit-host"
path = "src/main.rs"

[dependencies]
codeorbit-hub.workspace = true
codeorbit-core.workspace = true
codeorbit-contracts.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
fs2.workspace = true
axum.workspace = true
sysinfo.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
