[package]
name = "codeorbit-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
codeorbit-contracts.workspace = true
codeorbit-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
